# Resolve-X

./: .env.example  .gitignore  README.md  conflicts.txt  docker-compose.yml  package-lock.json  package.json  private.pem  public.pem  seed.js  test_integration.py
.agents/skills/resolvex-design/: SKILL.md
.github/workflows/: ci.yml
DBScan_clustering_pipeline/: .env.example  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  schemas.py  services.py  test_analytics_clustering.py
apps/api/: Dockerfile  index.js  package-lock.json  package.json  rabbitmq.js
apps/api/services/auth/: auth.js
apps/web/: .env.local  Dockerfile  README.md  build_err.txt  next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AdminLeafletMap.tsx  AnimatedTestimonials.tsx  EarlyWarningPanel.tsx  IssueAnalysisCard.tsx  Locationpicker.tsx  RoleRouter.tsx  SLAComplianceDashboard.tsx  SandboxBanner.tsx
apps/web/public/: manifest.json
apps/web/store/: auth.ts  complaintDraft.ts
apps/web/utils/: api.ts  types.ts  ws.ts
classification_and_detection/: Dockerfile  config.py  llm_service.py  main.py  models.py  services.py  test_api.py
db/: seed.sql
docs/: ResolveX_Implementation_Plan_v2 (1).docx  ResolveX_Implementation_Plan_v4.docx  ResolveX_PRD_v2 (1).docx  ResolveX_PRD_v4.docx  ResolveX_Spec_v2.md  ResolveX_Spec_v4.md  ResolveX_Technical_Documentation_v2 (2).docx  ResolveX_Technical_Documentation_v4.docx
risk_scoring_and_alerts/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
(+18 files in other folders)
