[project]
name = "dbscan-clustering-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "uvicorn>=0.30",
]
